syntax = "proto3";

option csharp_namespace = "DeliveryService.Backend.Notifications.Grpc";

package greet;

service NotificationsBackend {
  rpc SendNotifications (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}
